[package]
name = "arce_blog"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
serde_yaml = "0.8"
kamadak-exif = "0.5.4"
pulldown-cmark = { version = "0.9.1", default-features = false }
imagesize = "0.9"
image = "0.24.2"
regex = "1"
lazy_static = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
notify = "5.0.0"
r2d2_sqlite = "0.21.0"