[package]
name = "arce_blog"
version = "1.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
kamadak-exif = "0.5.4"
pulldown-cmark = { version = "0.9.2", default-features = false }
imagesize = "0.9"
image = "0.24.2"
regex = "1"
lazy_static = "1.4.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
notify = "5.0.0"
r2d2_sqlite = "0.21.0"
r2d2 = "0.8.10"
sha256 = "1.0.3"
log = "0.4.17"
env_logger = "0.9.0"
once_cell = "1.17.0"
clap = { version = "3.2.17", features = ["derive"] }
slug = "0.1.4"
text_io = "0.1.10"
sitemap = "0.4"


